--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Privacy-focused Lending & Borrowing Platform">
-    <title>zlend</title>
+    <title>WaveTip | Crypto Tipping on Twitch</title>
     
     <link rel="icon" href="/logo.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/logo.ico" />
